# app/src/routes/index.js
@@ -7,27 +7,44 @@ router.get('/', (req, res) => {
 });
 
 router.get('/weather', async (req, res) => {
-  if (!req.query.zipCode) {
+  const zipCode = req.query.zipCode;
+
+  if (!zipCode) {
     res
       .status(400)
-      .json({ error: 'Required query parameter zip code not found' });
+      .json({
+        code: 400,
+        error: 'Required query parameter zip code not found'
+      });
   }
-  const zipCode = parseInt(req.query.zipCode, 10);
+
+  if (zipCode.length !== 5) {
+    res
+      .status(400)
+      .json({ code: 400, error: 'The zip code must be 5 numbers long!' });
+  }
+
   // Mocking a database
   // Rather than making an API call every time, we save results per zip code on each request to cache it and prevent subsequent API calls
   let temp;
   switch (zipCode) {
-    case 33480:
+    case '33480':
       temp = 45;
       break;
-    case 08854:
+    case '08854':
       temp = 48;
       break;
     default:
-      temp = await getWeatherFromOpenWeatherAPI(req.query.zipCode);
+      temp = await getWeatherFromOpenWeatherAPI(req.query.zipCode).catch(
+        err => {
+          return res.status(400).json({
+            code: 400,
+            error: `The city indicated by ${zipCode} has not been found!`
+          });
+        }
+      );
       break;
   }
-  console.log;
   res.status(200).json({ code: 200, temp });
 });
 
@@ -55,13 +72,13 @@ router.post('/user/register', (req, res) => {
   ) {
     res
       .status(400)
-      .json({ code: 400, message: 'Please fill in all the required fields!' });
+      .json({ code: 400, error: 'Please fill in all the required fields!' });
   }
 
   if (age < 18) {
     res.status(400).json({
       code: 400,
-      message: 'Sorry, you must be 18 or older in order to use this app!'
+      error: 'Sorry, you must be 18 or older in order to use this app!'
     });
   }
 
